Working with firebase

--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,15 @@
 
 .App-intro {
   font-size: large;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.Url-photo {
+  width: 100px;
 }
