--- a/src/ImageGallery.css
+++ b/src/ImageGallery.css
@@ -13,6 +13,37 @@
   
   .image:hover {
     width: 200px;
-    opacity: 0.7;
+    opacity: 0.8;
+  }
 
+  .image-zoom {
+    width: 100%;
+  }
+
+  .close-button {
+    position: absolute;
+    width: 50px;
+    transform: rotate(45deg);
+    opacity: 0.3;
+    cursor: pointer;
+    transition: transform 0.2s linear;
+  }
+
+  .close-button:hover {
+    transform: rotate(135deg);
+  }
+
+  .remove-button {
+    position: absolute;
+    margin-top: 60px;
+    margin-left: -2px;
+    width: 50px;
+    opacity: 0.45;
+    cursor: pointer;
+    transition: transform 0.2s linear;
+  }
+
+  .remove-button:hover {
+    transform: rotate(30deg);
+    filter: sepia(100%) saturate(10000%) hue-rotate(0deg);
   }
