--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,30 @@
-.App {
+.app {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.appLogo {
+  animation: appLogoSpin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
+.appHeader {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
+.appTitle {
   font-size: 1.5em;
 }
 
-.App-intro {
+.appIntro {
   font-size: large;
   margin-top: 1em;
   margin-bottom: 1em;
 }
 
-@keyframes App-logo-spin {
+@keyframes appLogoSpin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
@@ -33,7 +33,7 @@
   padding-bottom: 75px;
 }
 
-.Url-photo {
+.urlPhoto {
   width: 40px;
   vertical-align: bottom;
   padding-right: 5px;
