--- a/src/components/authentication/AdminLogin.css
+++ b/src/components/authentication/AdminLogin.css
@@ -7,13 +7,9 @@
     padding-bottom: 75px;
 }
 
-.notLoggedIn {
-    padding-bottom: 75px;
-}
-
 .loggedIn button {
-    margin-left: 5px;
-    padding: 0px 15px;
+    margin-left: .5rem !important;
+    padding: 0 .5rem 0 .5rem !important;
     transition: opacity 0.15s ease-in-out;
 }
 
@@ -21,12 +17,24 @@
     opacity: 0.8;
 }
 
-.notLoggedIn button {
-    border-radius: 0 5px 5px 0;
+.notLoggedIn {
+    padding-bottom: 75px;
+}
+
+form {
+    display: flex !important;
+}
+
+form input[type=password] {
+    border-radius: 0.25rem 0rem 0rem 0.25rem !important;
+}
+
+form input[type=submit] {
+    border-radius: 0rem 0.25rem 0.25rem 0rem !important;
     transition: opacity 0.15s ease-in-out;
 }
 
-.notLoggedIn button:hover {
+form input[type=submit]:hover {
     opacity: 0.8;
 }
   
