--- a/src/components/body/gallery/imageGallery.css
+++ b/src/components/body/gallery/imageGallery.css
@@ -1,3 +1,8 @@
+.loading {
+  display: inline-block;
+  padding-top: 6rem;
+}
+
 .image {
     width: 150px;
     border-radius: 10px;
@@ -15,6 +20,7 @@
 
   .imageZoom {
     width: 100%;
+    border-radius: 10px;
   }
 
   .closeButton {
