--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,8 +1,13 @@
 .footer {
     background-color: #333;
-    padding: 10px;
+    padding: 1rem;
     color: white;
     bottom: 0;
     position: absolute;
     width: 100%;
 }
+
+.logo {
+    height: 1.5rem;
+    margin: 0.25rem;
+  }
