--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,12 +1,12 @@
 .logo {
     animation: logoSpin infinite 20s linear;
-    height: 80px;
+    height: 5rem;
   }
   
 .header {
     background-color: #222;
-    height: 150px;
-    padding: 20px;
+    height: 10rem;
+    padding: 2rem;
     color: white;
 }
   
