--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,9 +1,13 @@
+.footerContainer {
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+}
+
 .footer {
     background-color: #333;
     padding: 1rem;
     color: white;
-    bottom: 0;
-    position: absolute;
     width: 100%;
 }
 
