--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -18,3 +18,8 @@
     from { transform: rotate(0deg); }
     to { transform: rotate(360deg); }
 }
+
+ol, ul, dl {
+    margin-top: 0;
+    margin-bottom: 0rem !important;
+}
