--- a/src/components/body/gallery/imageGallery.css
+++ b/src/components/body/gallery/imageGallery.css
@@ -2,6 +2,7 @@
     width: 100%;
     float: left;
     position: relative;
+    z-index: 0;
 }
 
 .galleryToolsContainer {
@@ -86,4 +87,11 @@
     font-size: 0.9rem;
     font-weight: 500;
     line-height: 1.6rem;
+}
+
+.loading {
+    padding-top: 10rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 0;
 }
