Add album and images finished

--- a/src/components/body/gallery/albumList.css
+++ b/src/components/body/gallery/albumList.css
@@ -12,7 +12,7 @@
     display: inline-block;
     vertical-align: top;
     white-space: normal;
-    background-color: grey;
+    background-color: #efefef;
     position: relative;
     height: 118px;
     cursor: pointer;
